# issue-forge

./: .env.example  .gitignore  .yamllint.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
sample/: sample-workload.yaml
schema/: work-graph.schema.json
scripts/: emit_phase1.py  execution_context.py  lint_work.py  validate_work.py
tests/: test_dry_run.py
